fixes for hiberate/database