@@ -143,7 +143,7 @@ public class MongoDao {
 
         TenantVariable tenantVar = MongoDao.findVariableByName(tenantVarName, tenant, tenantVarType);
         if(tenantVar==null) {
-            LOG.info(String.format("tenantVar %s of type %s is NULL", tenantVarType.name(), tenantVarName));
+            LOG.info("tenantVar %s of type %s is NULL".formatted(tenantVarType.name(), tenantVarName));
             return null;
         }
 
@@ -218,7 +218,7 @@ public class MongoDao {
         if(tenantVariable.getCreatedAt() == 0) {
             tenantVariable.setCreatedAt(new Date().getTime());
         }
-        if(!tenantVariable.find(environment).isPresent()) {
+        if(tenantVariable.find(environment).isEmpty()) {
             tenantVariable.put(new EnvironmentValue(environment));
         }
 
