@@ -1,9 +1,9 @@
 package org.assimbly.gateway.jdbc.adapter;
 
 import com.ibm.db2.jcc.DB2Driver;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.URLEncodedUtils;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
 import org.assimbly.gateway.jdbc.domain.JDBCConnection;
 
 import java.nio.charset.StandardCharsets;
@@ -28,8 +28,8 @@ public class DB2Adapter implements DatabaseAdapter {
 
         String query = URLEncodedUtils.format(parameters, ';', StandardCharsets.UTF_8);
 
-        String url = String.format("jdbc:db2://%s:%s/%s:%s",
-                connection.getHost(), connection.getPort(), connection.getDatabase(), query);
+        String url = "jdbc:db2://%s:%s/%s:%s".formatted(
+            connection.getHost(), connection.getPort(), connection.getDatabase(), query);
 
         DriverManager.setLoginTimeout(5);
         DriverManager.registerDriver(driver);
